--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="um bot que ira moderar e deixar a sua comunidade segura de um jeito facil!"> <!--mensagem aparece de baixo do titulo da pesquisa-->
     <title>balle bot</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
 
 </head>
 <body>
